--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2417,18 +2417,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686088919#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686114879#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686088919#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686114879#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686088919#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686114879#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686088919#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1686114879#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5333,14 +5333,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686088919#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686114879#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686088919#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686114879#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5473,7 +5473,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686088919#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686114879#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5859,6 +5859,7 @@ body.lorem div[class^='drop-cap'] {
     background-color: var(--background-color);
     padding: var(--popins-popin-content-padding);
     display: flow-root;
+    contain: content;
 }
 
 /*┌─────────────┐*/
@@ -5899,14 +5900,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686088919#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686114879#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686088919#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686114879#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6787,7 +6788,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686088919#question');
+    background-image: url('/static/img/icon/icons.svg?v=1686114879#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7293,7 +7294,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1686088919#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1686114879#circle-notch-solid');
 
     pointer-events: none;
 }
