--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2328,16 +2328,16 @@ p.intro-graf::first-line {
 
 @media all and (max-width: 649px) {
     .epigraph {
-        padding: 0;
+        padding: 1.5em 0.75em;
         font-size: 0.95em;
     }
     .epigraph > blockquote::before {
-        left: -0.38em;
-        top: -0.75em;
+        left: -0.3em;
+        top: -0.9em;
     }
     .epigraph > blockquote::after {
-        right: -0.38em;
-        bottom: -1.25em;
+        right: -0.3em;
+        bottom: -1.4em;
     }
 }
 
@@ -2417,18 +2417,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686114879#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686117779#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686114879#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686117779#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686114879#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686117779#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686114879#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1686117779#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -3855,11 +3855,11 @@ section.footnotes .footnote-self-link {
 /**********/
 
 #footer {
-    margin-top: 2.5rem;
+    margin-top: 2.25rem;
 }
 @media all and (max-width: 649px) {
     #footer {
-        margin-top: 3rem;
+        margin-top: 2rem;
     }
 }
 
@@ -4125,6 +4125,12 @@ ol.link-bibliography-list-compact > li::before {
 	padding: 2.5rem 1.5rem 3.75rem 1.5rem;
 	border: 1px solid var(--GW-x-of-the-day-border-color);
 }
+@media all and (max-width: 649px) {
+	#x-of-the-day {
+		margin-top: 3rem;
+		padding: 3.5rem 1rem 3.75rem 1rem;
+	}
+}
 
 #x-of-the-day::before,
 #x-of-the-day::after {
@@ -4171,16 +4177,22 @@ ol.link-bibliography-list-compact > li::before {
 
     --box-horizontal-offset: calc(var(--box-padding-top) * 2.0);
 
+    margin: 3.5em 0 3.25em 0;
     padding-right: calc(var(--box-horizontal-offset) * 0.25);
+}
+@media only screen and (max-width: 649px) {
+    #x-of-the-day .site-of-the-day {
+        margin: 2.75em -1em;
+    }
 }
 
 #x-of-the-day .site-of-the-day blockquote {
     --background-color: var(--GW-body-background-color);
 
-    margin: 3.5em auto 3.25em auto;
     position: relative;
     height: var(--box-size);
     width: fit-content;
+    margin: auto;
     padding:
         var(--box-padding-top)
         calc(var(--box-size) + 2.0 * var(--box-padding-top))
@@ -4197,7 +4209,6 @@ ol.link-bibliography-list-compact > li::before {
 @media only screen and (max-width: 649px) {
     #x-of-the-day .site-of-the-day blockquote {
         font-size: calc((17/18) * var(--GW-body-text-font-size));
-        margin: 3.5em auto 2.75em auto;
         padding:
             var(--box-padding-top)
             calc(var(--box-size) - var(--box-padding-top))
@@ -4292,44 +4303,54 @@ ol.link-bibliography-list-compact > li::before {
 /*********************/
 /*	Navigation bar for previous/next page links (horizontal divider based on: 
 	https://commons.wikimedia.org/wiki/File:Filet_arabesque.svg )
-	On mobile, instead of the arabesque #navigation, we insert a G footer.
+	On mobile, we hide the forward/back links.
  */
 
+#navigation {
+	margin: 2.5em 0 0 0;
+	display: flex;
+	align-items: center;
+	opacity: 0.8;
+}
+#navigation a {
+	line-height: 1;
+	display: flex;
+}
+#navigation a:hover {
+	color: var(--GW-nav-header-link-color);
+}
+#navigation a svg {
+	margin: 0;
+	width: 100%;
+	height: 1.65em;
+}
+
+@media only screen and (min-width: 650px) {
+	#navigation {
+		justify-content: space-between;
+	}
+	#navigation #navigation-next,
+	#navigation #navigation-previous {
+		flex-grow: 1;
+	}
+	#navigation #navigation-next {
+		transform: scale(-1, 1);
+	}
+	#navigation #navigation-center {
+		width: 15%;
+	}
+}
 @media only screen and (max-width: 649px) {
-    #navigation {
+	#navigation {
+		justify-content: center;
+	}
+    #navigation #navigation-next,
+	#navigation #navigation-previous {
         display: none;
     }
-}
-@media only screen and (min-width: 650px) {
-    #navigation {
-        margin: 2.5em 0 0 0;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        opacity: 0.8;
-    }
-    #navigation a {
-        line-height: 1;
-        display: flex;
-    }
-    #navigation a:hover {
-        color: var(--GW-nav-header-link-color);
-    }
-    #navigation a svg {
-        margin: 0;
-        width: 100%;
-        height: 1.65em;
-    }
-    #navigation #navigation-next,
-    #navigation #navigation-previous {
-        flex-grow: 1;
-    }
-    #navigation #navigation-center {
-        width: 15%;
-    }
-    #navigation #navigation-next {
-        transform: scale(-1, 1);
-    }
+	#navigation #navigation-center {
+		width: 25%;
+	}
 }
 
 
@@ -5333,14 +5354,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686114879#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686117779#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686114879#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686117779#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5473,7 +5494,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686114879#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686117779#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5900,14 +5921,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686114879#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686117779#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686114879#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686117779#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6788,7 +6809,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686114879#question');
+    background-image: url('/static/img/icon/icons.svg?v=1686117779#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7294,7 +7315,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1686114879#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1686117779#circle-notch-solid');
 
     pointer-events: none;
 }
