--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -724,7 +724,7 @@ figure img[src$=".svg"] {
 	SVG as a ‘background-image’ (like for the  footers on the index page), so we
 	do variable+invert tricks to get a white copy of the logo as a hack.
  */
-@media only screen and (max-width: 649px) {
+@media all and (max-width: 649px) {
     #footer-decoration-container a.footer-logo::after {
         filter: invert(1);
         background-color: var(--GW-body-background-color-inverted);
@@ -904,6 +904,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1686117779">
-<script src="/static/js/head.js?v=1686117778"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1686118376">
+<script src="/static/js/head.js?v=1686118375"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1686117779" as="image">
