--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -1205,6 +1205,29 @@ section.level1 > .heading a::after {
 	left: 0;
 }
 
+/*	Pilcrow in H3, H4, H5, H6.
+ */
+section.level3 > .heading a,
+section.level4 > .heading a,
+section.level5 > .heading a,
+section.level6 > .heading a {
+	position: relative;
+}
+section.level3 > .heading a::after,
+section.level4 > .heading a::after,
+section.level5 > .heading a::after,
+section.level6 > .heading a::after {
+	right: -1.5em;
+}
+section.level3 > .heading a::after,
+section.level4 > .heading a::after {
+	bottom: 0.4em;
+}
+section.level5 > .heading a::after,
+section.level6 > .heading a::after {
+	bottom: 0.3em;
+}
+
 /**********************************************************/
 /*	Highlighted sections. (Due to extract popups, usually.)
  */
@@ -2417,18 +2440,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686117779#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686118835#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686117779#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686118835#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686117779#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686118835#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686117779#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1686118835#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5354,14 +5377,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686117779#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686118835#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686117779#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686118835#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5494,7 +5517,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686117779#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686118835#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5921,14 +5944,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686117779#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686118835#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686117779#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686118835#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6809,7 +6832,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686117779#question');
+    background-image: url('/static/img/icon/icons.svg?v=1686118835#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7315,7 +7338,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1686117779#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1686118835#circle-notch-solid');
 
     pointer-events: none;
 }
