--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2248,7 +2248,31 @@ img::before {
 /**************/
 /* INTERVIEWS */
 /**************/
-/*  e.g. https://gwern.net/Morning-writing#examples
+
+/***************************************************/
+/*	New style interviews
+	(e.g. https://gwern.net/lorem-block#interviews )
+ */
+
+blockquote.interview ul {
+	--list-left-padding: 0em;
+	--text-indent: 2.5em;
+}
+
+blockquote.interview ul li::before {
+	display: none;
+}
+
+blockquote.interview .speaker {
+	font-variant-caps: small-caps;
+	letter-spacing: -0.25px;
+}
+
+/*****************************************************/
+/*  Legacy styles for un-converted interviews
+	(e.g. https://gwern.net/Morning-writing#examples )
+
+	NOTE: Remove this once interviews are all converted. —SA 2023-06-07
  */
 
 blockquote p > code:first-child,
@@ -2435,18 +2459,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686132254#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686168970#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686132254#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686168970#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686132254#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686168970#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686132254#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1686168970#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5368,14 +5392,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686132254#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686168970#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686132254#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686168970#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5508,7 +5532,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686132254#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686168970#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5935,14 +5959,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686132254#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686168970#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686132254#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686168970#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6823,7 +6847,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686132254#question');
+    background-image: url('/static/img/icon/icons.svg?v=1686168970#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7329,7 +7353,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1686132254#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1686168970#circle-notch-solid');
 
     pointer-events: none;
 }
